--- a/EPAM.RD.2017F/EPAM.RD.2017F.csproj
+++ b/EPAM.RD.2017F/EPAM.RD.2017F.csproj
@@ -40,8 +40,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Entities\User.cs" />
+    <Compile Include="Exceptions\ServiceNotInMasterModeException.cs" />
+    <Compile Include="Exceptions\UserExistsException.cs" />
+    <Compile Include="Exceptions\UserNotExists.cs" />
+    <Compile Include="Interfaces\IService.cs" />
+    <Compile Include="Interfaces\IStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Storages\XmlStorage.cs" />
+    <Compile Include="UserService.cs" />
+    <Compile Include="UserServiceEventArgs.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
